smile-orm/src/main/java/org/smile/orm/parser/OrmWhereSqlParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. OrmWhereSqlParser.java */
package org.smile.orm.parser;
import org.smile.util.StringUtils;
import org.smile.expression.*;
import org.smile.orm.parser.InMultiParameterExpression;
import java.io.Reader;
import java.io.StringReader;
import java.util.List;
import java.util.ArrayList;

public class OrmWhereSqlParser/*@bgen(jjtree)*/implements OrmWhereSqlParserTreeConstants, OrmWhereSqlParserConstants {/*@bgen(jjtree)*/
  protected JJTOrmWhereSqlParserState jjtree = new JJTOrmWhereSqlParserState();public static final SimpleExpression parse(Reader reader) throws ParseException
  {
    OrmWhereSqlParser parser = new OrmWhereSqlParser(reader);
    return parser.parse();
  }

  public static final SimpleExpression parse(String expression) throws ParseException
  {
    OrmWhereSqlParser parser = new OrmWhereSqlParser(new StringReader(expression));
    return parser.parse();
  }

  final public SimpleExpression parse() throws ParseException {
 /*@bgen(jjtree) parse */
  SimpleNode jjtn000 = new SimpleNode(JJTPARSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);SimpleExpression retval = null;
  SimpleExpression subexp = null;
  boolean wrapNot = false;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_NOT:
        jj_consume_token(K_NOT);
      wrapNot = true;
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      retval = Expression();
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if (wrapNot)
    {
      retval = new NotExpression(retval);
      retval.setSource("parse");
    }
    {if (true) return retval;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleExpression Expression() throws ParseException {
 /*@bgen(jjtree) Expression */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);SimpleExpression retval = null;
  boolean wrapNot = false;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_NOT:
        jj_consume_token(K_NOT);
        wrapNot = true;
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      if (jj_2_1(2147483647)) {
        retval = BinaryExpression();
      } else if (jj_2_2(2147483647)) {
        retval = OrExpression();
      } else if (jj_2_3(2147483647)) {
        retval = AdditiveExpression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 27:
          jj_consume_token(27);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case K_NOT:
            jj_consume_token(K_NOT);
          wrapNot = true;
            break;
          default:
            jj_la1[2] = jj_gen;
            ;
          }
          retval = Expression();
          jj_consume_token(28);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if (wrapNot)
    {
      retval = new NotExpression(retval);
      retval.setSource("Expression");
    }
    {if (true) return retval;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleExpression OrExpression() throws ParseException {
 /*@bgen(jjtree) OrExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTOREXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);SimpleExpression left, right, result;
  SymbolExpression operate;
    try {
      left = AndExpression();
    result = left;
      label_1:
      while (true) {
        if (jj_2_4(2147483647)) {
          ;
        } else {
          break label_1;
        }
        jj_consume_token(K_OR);
      operate = new ConditionSymbolExpression(Expression.OR);
        right = AndExpression();
      result = new ConditionExpression(left, right, operate);
      left = result;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    result.setSource("OrExpression");
    {if (true) return result;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleExpression InMultiQustion() throws ParseException {
 /*@bgen(jjtree) InMultiQustion */
     SimpleNode jjtn000 = new SimpleNode(JJTINMULTIQUSTION);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);Token tk ;
    try {
      tk = jj_consume_token(IN_MULTI_QUSTION);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new InMultiParameterExpression(tk.image);}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleExpression AndExpression() throws ParseException {
 /*@bgen(jjtree) AndExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTANDEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);SimpleExpression left, right, result;
  SymbolExpression operate;
  boolean not = false;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_NOT:
        jj_consume_token(K_NOT);
      not = true;
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      if (jj_2_5(2147483647)) {
        left = ConditionExpression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 27:
          jj_consume_token(27);
          left = OrExpression();
          jj_consume_token(28);
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    left.setWrapNot(not);
    not = false;
    result = left;
      label_2:
      while (true) {
        if (jj_2_6(2147483647)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(K_AND);
      operate = new ConditionSymbolExpression(Expression.AND);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_NOT:
          jj_consume_token(K_NOT);
        not = true;
          break;
        default:
          jj_la1[6] = jj_gen;
          ;
        }
        if (jj_2_7(2147483647)) {
          right = ConditionExpression();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 27:
            jj_consume_token(27);
            right = OrExpression();
            jj_consume_token(28);
            break;
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      right.setWrapNot(not);
      not = false;
      result = new ConditionExpression(left, right, operate);
      result.setSource("AndExpression");
      left = result;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return result;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleExpression ConditionPartExpression() throws ParseException {
 /*@bgen(jjtree) ConditionPartExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDITIONPARTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);SimpleExpression part = null;
    try {
      if (jj_2_8(2147483647)) {
        part = AdditiveExpression();
      } else if (jj_2_9(2147483647)) {
        part = Function();
      } else if (jj_2_10(2147483647)) {
        part = OneKeyWord();
      } else if (jj_2_11(2147483647)) {
        part = NumberExpression();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return part;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleExpression ConditionExpression() throws ParseException {
 /*@bgen(jjtree) ConditionExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDITIONEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);SimpleExpression start = null;
  SimpleExpression end = null;
  SymbolExpression operate = null;
  boolean not = false;
  boolean wrapNot = false;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_NOT:
        jj_consume_token(K_NOT);
      wrapNot = true;
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      start = ConditionPartExpression();
      start.setWrapNot(wrapNot);
      wrapNot = false;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_NOT:
        jj_consume_token(K_NOT);
      not = true;
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LIKE:
        operate = LikeWord();
        break;
      case NOT_EQAUL:
      case GREAT_EQAUL:
      case LESS_EQAUL:
      case LESS_THAN:
      case GREAT_THAN:
      case EQAUL:
      case K_IS:
      case K_IN:
        operate = OperateWord();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_NOT:
          jj_consume_token(K_NOT);
          wrapNot = true;
          break;
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_12(2147483647)) {
        end = InMultiQustion();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_BOOLEAN:
        case K_NULL:
        case K_NOT:
        case S_LONG:
        case S_INTEGERSTR:
        case S_DOUBLESTR:
        case S_FIELD:
        case S_PARAMTER:
        case S_FLAG_QUSTION:
        case S_QUOTED_IDENTIFIER:
        case 27:
        case 29:
        case 37:
          end = ConditionPartExpression();
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    end.setWrapNot(wrapNot);
    SimpleExpression result = new ConditionExpression(start, end, operate);
    result.setNot(not);
    result.setSource("ConditionExpression");
    {if (true) return result;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public String FieldName() throws ParseException {
 /*@bgen(jjtree) FieldName */
  SimpleNode jjtn000 = new SimpleNode(JJTFIELDNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token tk = null;
    try {
      tk = jj_consume_token(S_FIELD);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return tk.image;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleExpression OneKeyWord() throws ParseException {
 /*@bgen(jjtree) OneKeyWord */
  SimpleNode jjtn000 = new SimpleNode(JJTONEKEYWORD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token tk = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_NULL:
        tk = jj_consume_token(K_NULL);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new NullExpression();}
        break;
      case S_FLAG_QUSTION:
        tk = jj_consume_token(S_FLAG_QUSTION);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new SpecialParameterExpression(tk.image);}
        break;
      case S_PARAMTER:
        tk = jj_consume_token(S_PARAMTER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new SpecialParameterExpression("#",tk.image.substring(1));}
        break;
      case S_FIELD:
        tk = jj_consume_token(S_FIELD);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new FieldNameExpression(tk.image);}
        break;
      case K_BOOLEAN:
        tk = jj_consume_token(K_BOOLEAN);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new BooleanExpression(Boolean.valueOf(tk.image));}
        break;
      case S_QUOTED_IDENTIFIER:
        tk = jj_consume_token(S_QUOTED_IDENTIFIER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new StringExpression(StringUtils.valueOfQuoted(tk.image));}
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public NumberExpression NumberExpression() throws ParseException {
 /*@bgen(jjtree) NumberExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTNUMBEREXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);NumberExpression exp;
  boolean minus = false;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
        jj_consume_token(29);
      minus = true;
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      exp = Number();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    exp.setMinus(minus);
    {if (true) return exp;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }
